# marketplace

./: .env.example  .gitignore  CODEX_PROMPT_Marketplace.md  docker-compose.yml
server/: .env.example  CMakeLists.txt  Dockerfile  main.cpp
server/src/config/: Config.hpp
server/src/db/: Database.cpp  Database.hpp
server/src/db/migrations/: 001_init.js  001_init.sql
server/src/handlers/: AuthHandler.cpp  AuthHandler.hpp  ListingHandler.cpp  ListingHandler.hpp  RoleHandler.cpp  RoleHandler.hpp  UserHandler.cpp  UserHandler.hpp
server/src/middleware/: AuthMiddleware.cpp  AuthMiddleware.hpp
server/src/models/: Chat.hpp  Listing.hpp  ListingImage.hpp  Message.hpp  Role.hpp  User.hpp
server/src/services/: EmailService.cpp  EmailService.hpp  JwtService.cpp  JwtService.hpp  PasswordService.cpp  PasswordService.hpp
server/src/utils/: Json.hpp  Uuid.hpp
web-client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web-client/scripts/: check-imports.mjs
web-client/src/: App.tsx  env.d.ts  main.tsx  styles.css
web-client/src/api/: auth.ts  client.ts  listings.ts  roles.ts  users.ts
web-client/src/components/layout/: Footer.tsx  Header.tsx  ProtectedRoute.tsx
web-client/src/hooks/: useAuth.ts  useLang.ts  useTheme.ts
web-client/src/i18n/: index.ts
web-client/src/pages/: EmailVerifyPage.tsx  HomePage.tsx  ListingDetailPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
web-client/src/router/: index.tsx
web-client/src/store/: authStore.tsx  themeStore.ts
web-client/src/types/: api.ts  listing.ts  role.ts  user.ts
(+17 files in other folders)
