cmake_minimum_required(VERSION 3.20)
project(marketplace_server LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(PkgConfig REQUIRED)
pkg_check_modules(MONGOCXX REQUIRED libmongocxx)
pkg_check_modules(BSONCXX REQUIRED libbsoncxx)
add_executable(marketplace_server main.cpp src/db/Database.cpp src/services/JwtService.cpp src/services/EmailService.cpp src/services/PasswordService.cpp src/middleware/AuthMiddleware.cpp src/handlers/AuthHandler.cpp src/handlers/UserHandler.cpp src/handlers/ListingHandler.cpp src/handlers/RoleHandler.cpp)
target_include_directories(marketplace_server PRIVATE ${MONGOCXX_INCLUDE_DIRS} ${BSONCXX_INCLUDE_DIRS})
target_link_libraries(marketplace_server PRIVATE ${MONGOCXX_LIBRARIES} ${BSONCXX_LIBRARIES} curl bcrypt)
